# lyo-3m-all-s2p3-02

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
Editor/: CMakeLists.txt
Editor/include/: Editor.h  EditorImGui.h  EditorRaylib3D.h  EditorSerializer.h  Inspector.h  InspectorNodeProperties.h  InspectorNodePropreties.h  NewGizmo.hpp  SerializeObject.h  rlights.h
Editor/include/AssetLoading/: EditorAssetLoader.h
Editor/src/: Editor.cpp  EditorImGui.cpp  EditorRaylib3D.cpp  EditorSerializer.cpp  InspectorNodeProperties.cpp  InspectorNodePropreties.cpp  SerializeObject.cpp
Editor/src/AssetLoading/: EditorAssetLoader.cpp  EditorFBXLoader.cpp
Foundry/: CMakeLists.txt
Foundry/include/: Action.h  ActionMap.h  AnimationStructs.h  AudioEngine.h  AudioMixer.h  CollisionData.h  Debug.h  Define.h  EditorSerializer.h  Event.hpp  GameLoop.h  GeometryFactory.h  IAction.h  IControl.h  ISerializable.h  MixerAudio.h  Network.h  Node.h  PhysicsManager.h  ProxyRegistration.h  SerializeObject.h  SerializeObject.hpp  Server.hpp  Transform2D.h  Transform3D.h
Foundry/include/AssetLoading/: AssetLoader.h  AssetsStructs.h  FBXLoader.h
Foundry/include/Multithreading/: NodeChunk.h  Task.h  TaskGraph.h
Foundry/include/Network/: SyncVar.h
Foundry/include/Nodes/: AllNodes.h  Node2D.h  Node3D.h  NodeAnimator3D.h  NodeAudioEmitter.h  NodeAudioListener.h  NodeCollider.h  NodeMesh.h  NodeMeshAnimated3D.h  NodeNetwork.h  NodeNetworkClient.h  NodeNetworkServer.h  NodeRigidBody.h  NodeTrigger.h  NodeViewport.h  NodeWindow.h
Foundry/include/Registries/: AutomaticRegister.hpp  (+2 more)
Foundry/src/: Action.cpp  ActionMap.cpp  AudioEngine.cpp  AudioMixer.cpp  EditorSerializer.cpp  GameLoop.cpp  GeometryFactory.cpp  IAction.cpp  IControl.cpp  ISerializable.cpp  MixerAudio.cpp  Network.cpp  Node.cpp  SerializeObject.cpp  Transform2D.cpp  Transform3D.cpp
Game/: CMakeLists.txt
Game/src/: demoRender.cpp  main.cpp  mainActionMap.cpp  mainAssetLoading.cpp  mainAudio.cpp  mainEditor.cpp  mainGameLoop.cpp  mainGeo.cpp  mainJsonSerialization.cpp  mainNetwork.cpp  mainTransform2D.cpp  mainTransform3D.cpp  render.cpp
(+160 files in other folders)
